package western;

import java.util.ArrayList;

public interface HorsLaLoi {
    public void kidnapper(Dame dame);
    public void seFaireCapturer(Cowboy cowboy);
    public int getPrime();
    public ArrayList<Dame> getSesDames();

    public String getPseudo();
    public void repondre(Cowboy cowboy);

}
